implemented fetching of all pull requests per branch